# Takwa_ws_pfe

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/follow_waypoints/lib/follow_waypoints/: follow_waypoints
install/follow_waypoints/share/follow_waypoints/: package.sh  package.xml
install/kobuki_core/lib/: libkobuki_core.so.1.4.0
install/kobuki_core/lib/kobuki_core/: demo_buttons  demo_chirp  demo_custom_logging  demo_data_stream  demo_log_levels  demo_raw_data_stream  demo_simple_loop  demo_velocity_commands
log/: latest_build
ros_grafana_stack/: docker-compose.yml
ros_grafana_stack/config/: promtail-config.yaml
src/follow_waypoints/: setup.py
src/follow_waypoints/follow_waypoints/: follow_waypoints.py
src/maps/: m_maps.yaml  mm_maps.pgm  mm_maps.yaml  my_map.pgm  my_map.yaml  my_map2.pgm  my_map2.yaml  takwa2_maps.pgm  takwa_maps.yaml
src/mon_package/: package.xml  setup.py
src/mon_package/dashboard/: dashboard.py
src/mon_package/launch/: main_launch.py
src/mon_package/mon_package/: diagnostic_file_logger.py
src/nav2_launch/: package.xml  setup.cfg  setup.py
src/nav2_launch/config/: amcl_map.yaml
src/nav2_launch/launch/: amcl_and_map.launch.py  navigation_launch.py
src/pkg-nav/: CMakeLists.txt
src/pkg-nav/config/: slam_params.yaml
src/pkg-nav/launch/: amcl.launch.py  localization.launch.py  nav2.launch.py
src/pkg-nav/scripts/: goal_delay.py  human_following.py  sim_clock.py
src/slam_launch/: package.xml  setup.py
src/slam_launch/launch/: slam_launch.py
(+46 files in other folders)
